src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Alternate_Email__c</fullName>
        <formula>Owner:User.Alternate_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Alternate Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probability_of_Close__c</fullName>
        <label>Probability of Close</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Seg__c</fullName>
        <label>Product Seg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>BPMS</fullName>
                </value>
                <value>
                    <fullName>PUBR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Cannot_Be_Completed_As_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Cannot Be Completed As Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_ID__c</fullName>
        <label>Proposal ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSD_Internal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSD/Internal Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Detail__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account on Hold</fullName>
                </value>
                <value>
                    <fullName>Account Risk Call</fullName>
                </value>
                <value>
                    <fullName>Active Project Contacts</fullName>
                </value>
                <value>
                    <fullName>Add Account</fullName>
                </value>
                <value>
                    <fullName>Add Address</fullName>
                </value>
                <value>
                    <fullName>Add Analytics</fullName>
                </value>
                <value>
                    <fullName>Add Housing Analysis Markets</fullName>
                </value>
                <value>
                    <fullName>Adding and Customizing Reports</fullName>
                </value>
                <value>
                    <fullName>Add Insight Markets</fullName>
                </value>
                <value>
                    <fullName>Add New User</fullName>
                </value>
                <value>
                    <fullName>Add Property Analysis Markets</fullName>
                </value>
                <value>
                    <fullName>Add X/Y Access</fullName>
                </value>
                <value>
                    <fullName>Aerials</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Analytics Reports</fullName>
                </value>
                <value>
                    <fullName>Application Training/Navigation</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
                <value>
                    <fullName>Browser Issues</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t log in</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Cannot Access</fullName>
                </value>
                <value>
                    <fullName>Cannot connect Market</fullName>
                </value>
                <value>
                    <fullName>Cannot Recover Password</fullName>
                </value>
                <value>
                    <fullName>Cannot save or print reports</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Catalog - Linked Deeds</fullName>
                </value>
                <value>
                    <fullName>Change Mortgage/Lender</fullName>
                </value>
                <value>
                    <fullName>Change password</fullName>
                </value>
                <value>
                    <fullName>Chicago/Central</fullName>
                </value>
                <value>
                    <fullName>Class Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved_By__c</fullName>
        <description>Case team responsible for resolution</description>
        <label>Resolved By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Support</fullName>
                    <default>true</default>
                    <label>Customer Support</label>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep_Notes__c</fullName>
        <label>Sales Rep Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adam Mowrey</fullName>
                </value>
                <value>
                    <fullName>Andy Reid</fullName>
                </value>
                <value>
                    <fullName>Anthony Crocco</fullName>
                </value>
                <value>
                    <fullName>Ben Sage</fullName>
                </value>
                <value>
                    <fullName>Bill Miley</fullName>
                </value>
                <value>
                    <fullName>Bob Hamilton</fullName>
                </value>
                <value>
                    <fullName>Bob Knight</fullName>
                </value>
                <value>
                    <fullName>Bob Marinez</fullName>
                </value>
                <value>
                    <fullName>Brad Hunter</fullName>
                </value>
                <value>
                    <fullName>Brian Sherry</fullName>
                </value>
                <value>
                    <fullName>Brooke Burns</fullName>
                </value>
                <value>
                    <fullName>Budd Brumbaugh</fullName>
                </value>
                <value>
                    <fullName>Bud Rogers</fullName>
                </value>
                <value>
                    <fullName>Carol Weinman</fullName>
                </value>
                <value>
                    <fullName>Catherine LaFemina</fullName>
                </value>
                <value>
                    <fullName>Chris Huecksteadt</fullName>
                </value>
                <value>
                    <fullName>Christie Bardo</fullName>
                </value>
                <value>
                    <fullName>Clare ODower</fullName>
                </value>
                <value>
                    <fullName>Cliff Smith</fullName>
                </value>
                <value>
                    <fullName>Daniel Colunio</fullName>
                </value>
                <value>
                    <fullName>David Brown</fullName>
                </value>
                <value>
                    <fullName>David Clark</fullName>
                </value>
                <value>
                    <fullName>David Cobb</fullName>
                </value>
                <value>
                    <fullName>David MacIntosh</fullName>
                </value>
                <value>
                    <fullName>Debora Reda</fullName>
                </value>
                <value>
                    <fullName>Don McComb</fullName>
                </value>
                <value>
                    <fullName>Doyle Beekley</fullName>
                </value>
                <value>
                    <fullName>Edwin Kraft</fullName>
                </value>
                <value>
                    <fullName>Eric Allen</fullName>
                </value>
                <value>
                    <fullName>Eugene James</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screenshots__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screenshots</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Agreement__c</fullName>
        <defaultValue>&quot;To Rep&quot;</defaultValue>
        <label>Send Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Rep</fullName>
                </value>
                <value>
                    <fullName>Via Echosign</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emails the Case Contact</description>
        <inlineHelpText>Checking this box will send a New Case Created email notification to the Case Contact (Customer).</inlineHelpText>
        <label>Send Email Notification to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_Notification_to_Contact_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked box enables a New Case Created notification to be sent to Contact Owner of the case.</description>
        <inlineHelpText>Checking this box enables a New Case Created notification to be sent to the Contact Owner of the case.  Unchecking the box disables the notification.</inlineHelpText>
        <label>Send Email Notification to Contact Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Sold to Contact)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Effective_Date__c</fullName>
        <label>Start/Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Need Contact Name</fullName>
                </value>
                <value>
                    <fullName>Creative Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Accounts_Manager__c</fullName>
        <formula>TEXT( Account.Strategic_Accounts_Manager__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Accounts Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Accounts_Owner__c</fullName>
        <formula>TEXT( Account.Strategic_Account_Owner__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Resolution_Date__c</fullName>
        <description>Target Date for Case to be Resolved or an Update Sent</description>
        <inlineHelpText>Target Date for Case to be Resolved or an Update Sent</inlineHelpText>
        <label>Target Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>TEXT( Opportunity__r.FC_Term_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Resolve__c</fullName>
        <label>Time to Resolve</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Triage_Level__c</fullName>
        <description>Select a Triage Level in order to set up appropriate notification timelines.</description>
        <inlineHelpText>Used by Customer Support and Tech/Prod to determine timeline details/notifications.</inlineHelpText>
        <label>Triage Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                    <default>true</default>
                    <label>Level 1</label>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Assigned_to_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Assigned to Case</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nd_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If an Agency is involved, this will be the Advertiser Account after you add the Agency Contact.  If no Agency is involved, both fields should be the same.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  It should be incremented each time the Lead is dialed.</description>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>quot__Actual_Hours__c</fullName>
        <description>Actual number of hours spent resolving this case.</description>
        <inlineHelpText>Actual number of hours spent resolving this case.</inlineHelpText>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quot__Agreed_to_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the customer agrees to the statement of work on the authorization request page.</description>
        <inlineHelpText>Checked when the customer agrees to the statement of work on the authorization request page.</inlineHelpText>
        <label>Agreed to SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quot__Auth_Payment_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the first authorization or payment is processed in response to a support authorization request.</description>
        <inlineHelpText>Checked when the first authorization or payment is processed in response to a support authorization request.</inlineHelpText>
        <label>Auth/Payment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quot__Auth_Payment_Timestamp__c</fullName>
        <description>Timestamp of the payment or authorization completed after requesting a support authorization.  Subsequent payments or authorizations will not change this timestamp unless another request is sent.</description>
        <inlineHelpText>Timestamp of the payment or authorization completed after requesting a support authorization.  Subsequent payments or authorizations will not change this timestamp unless another request is sent.</inlineHelpText>
        <label>Auth/Payment Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>quot__Auth_Request_Expiration__c</fullName>
        <description>Date the current support authorization request expires. Hides the SiteSupportAuth page after expiration.</description>
        <inlineHelpText>Date the current support authorization request expires. Hides the SiteSupportAuth page after expiration.</inlineHelpText>
        <label>Auth Request Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>quot__Auth_Request_Pending__c</fullName>
        <description>Indicates when a support authorization has been sent, but a payment or authorization has not yet been completed and applied to the case.  A batch script checks for payments on a periodic basic.</description>
        <formula>IMAGE(  IF( quot__Publish_Auth_Request__c = true, IF ( quot__Auth_Request_Expiration__c &lt; TODAY(), &quot;/img/samples/flag_red.gif&quot;,&quot;/img/samples/flag_green.gif&quot;),  &quot;/s.gif&quot;),  &quot;Pending Support Auth Request Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates when a support authorization has been sent, but a payment or authorization has not yet been completed and applied to the case.  A batch script checks for payments on a periodic basic.</inlineHelpText>
        <label>Auth Request Pending</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quot__Authorization_Amount__c</fullName>
        <description>Total support authorization amount. (Auth Hours * Rate)</description>
        <formula>IF (AND (ISNULL(quot__Authorization_Hours__c),ISNULL(quot__Rate__c)),null, quot__Authorization_Hours__c *  quot__Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total support authorization amount. (Auth Hours * Rate)</inlineHelpText>
        <label>Authorization Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>quot__Authorization_Hours__c</fullName>
        <description>Total hours requested on current support authorization. Displayed on SiteSupportAuth page to customer.</description>
        <inlineHelpText>Total hours requested on current support authorization. Displayed on SiteSupportAuth page to customer.</inlineHelpText>
        <label>Authorization Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quot__Estimated_Hours__c</fullName>
        <description>Total hours requested on current support authorization. Displayed on SiteSupportAuth page to customer.</description>
        <inlineHelpText>Total hours requested on current support authorization. Displayed on SiteSupportAuth page to customer.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quot__Processed_Payment_Id__c</fullName>
        <description>Record ID of the most recent completed payment processed for this case and applied as a support auth request payment.</description>
        <inlineHelpText>Record ID of the most recent completed payment processed for this case and applied as a support auth request payment.</inlineHelpText>
        <label>Processed Payment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quot__Publish_Auth_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows customers to submit an online support authorization for the current case.</description>
        <inlineHelpText>Allows customers to submit an online support authorization for the current case.</inlineHelpText>
        <label>Publish Auth Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quot__Rate__c</fullName>
        <description>Hourly rate to use for billable hours on this case.</description>
        <inlineHelpText>Hourly rate to use for billable hours on this case.</inlineHelpText>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>quot__Request_Timestamp__c</fullName>
        <description>Timestamp of most recent support auth request (set when published)</description>
        <inlineHelpText>Timestamp of most recent support auth request (set when published)</inlineHelpText>
        <label>Request Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>quot__Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorization Only</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>quot__Statement_of_Work_RT__c</fullName>
        <description>Rich text field use for statement of work if Quotes and Invoices is configured to use the SF rich text editor on Cases</description>
        <label>Statement of Work</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>quot__Statement_of_Work__c</fullName>
        <description>HTML content describing the work to be done under the current support ticket. Displayed on the SiteSupportAuth page to customers.</description>
        <inlineHelpText>HTML content describing the work to be done under the current support ticket. Displayed on the SiteSupportAuth page to customers.</inlineHelpText>
        <label>Statement of Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AC_All_Open_Creative_Chase_Queue</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>nd_Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Proposal_ID__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Creative Chase to Client</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <label>AC All Open Creative Chase Queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>Account_Coordinators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_Production_Creative_Queue</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>nd_Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Proposal_ID__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Media_Group</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>notEqual</operation>
            <value>Creative Chase to Client</value>
        </filters>
        <label>AC Production Creative Queue</label>
        <language>en_US</language>
        <sharedTo>
            <group>Account_Coordinators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounting_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Accounting Queue</label>
        <language>en_US</language>
        <queue>Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCasesMedia</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>nd_Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Proposal_ID__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Media_Group</value>
        </filters>
        <label>All Open Cases - Media</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CS_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Target_Resolution_Date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notEqual</operation>
            <value>Meyers Research LLC</value>
        </filters>
        <label>Customer Support Queue</label>
        <language>en_US</language>
        <queue>CustomerServiceQueue</queue>
    </listViews>
    <listViews>
        <fullName>Centralized_CRM_Metrostudy_Tickets</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Business_Center__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SFDC_Tickets</value>
        </filters>
        <filters>
            <field>Business_Center__c</field>
            <operation>includes</operation>
            <value>Metrostudy</value>
        </filters>
        <label>Centralized CRM - Metrostudy Tickets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Corelogic_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Vendor__c</field>
            <operation>equals</operation>
            <value>CoreLogic</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Corelogic Cases</label>
    </listViews>
    <listViews>
        <fullName>Creative_Delivery</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.REASON</columns>
        <columns>Proposal_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Status_Detail__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>DisplayCreative Delivery</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Media_Group</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Creative Delivery</label>
        <language>en_US</language>
        <sharedTo>
            <group>Media</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Custom_Client_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Custom Client Event Queue</label>
        <language>en_US</language>
        <queue>Custom_Client_Event_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Support_View</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Coney,Pillai,Hammond,Bennett,Ciochetti,Customer Service Queue,Olson</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>notEqual</operation>
            <value>Input System - Hybrid,Survey,Audit</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Meyers Research,Zonda</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Case.SFDC_Tickets</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>Project Feedback</value>
        </filters>
        <label>Metrostudy - Customer Support View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>